--- a/_posts/2021-12-27-Nadri.md
+++ b/_posts/2021-12-27-Nadri.md
@@ -19,8 +19,8 @@ Thank you to Dahye, Seonghyeon, Taekyung, Seoyoung, and Sunah.
 
 
 **Recommandation Algorithm** 
-    * Greedy : The smallest distance is next path 
-    (Later, this algorithm needs to be developed.)
+- Greedy : The smallest distance is next path 
+(Later, this algorithm needs to be developed.)
 
 ## Tech ##
     * Spring Framework
